Added warning about Fortune Teller into Google web pages
The content scripts component is now injected whenever there is
matching of Google pages, either from the home page or search
result pages

--- a/manifest.json
+++ b/manifest.json
@@ -31,6 +31,9 @@
       "48" : "icon48.png",
       "128" : "icon128.png"
   },
+  "web_accessible_resources": [
+      "*.png"
+  ],
   "permissions": [
     "activeTab",
     "https://ajax.googleapis.com.br/",
